# django-payroll

./: LICENSE  README.md  pyproject.toml
payroll/: apps.py  conf.py  enums.py
payroll/api/: serializers.py  urls.py  views.py
payroll/mgmt/commands/: payroll_bootstrap_demo.py
payroll/models/: component.py  config.py  employee.py  payslip.py
payroll/posting/: adapters.py
payroll/templates/payroll/: payslip.html
payroll/tests/: test_payroll_posting.py
payroll/utils/: pdf.py
