[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-payroll-ve"
version = "0.1.0"
description = "Employee payroll processing and accounting integration for Django (works with django-finacc)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Verified Enquiries / Tushar K.", email = "support@verifiedenquiries.com"}]
license = {text = "MIT"}
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.15",
  "django-finacc>=0.1.0"
]
